--- a/css/style.css
+++ b/css/style.css
@@ -1,82 +1,114 @@
-@import url('https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Carrois+Gothic&family=Coming+Soon&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 * {
-    font-family: "Black Ops One", serif;
+    margin: 0;
+    padding: 0;
+    font-family: "DM Serif Text", serif;
+}
+
+html, body {
+    height: 100%;
+    width: 100%;
+    scroll-behavior: smooth;
+}
+
+html {
+    scroll-behavior: smooth; /* Añade desplazamiento suave */
 }
 
 body {
-    background-color: #d4d2d2;
+    background: linear-gradient(to right, #161134, #240b36);
     display: flex;
     flex-direction: column;
 }
 
 header {
-    height: fit-content;
-}
-
-.container-header button {
-    border-radius: 2em;
+    top: 0;
     right: 0;
-    position: absolute;
-    margin-right: 2em;
-    margin-top: 1em;
+    left: 0;
+    position: fixed;
+    height: 92px;
+    width: 100%;
+    transition: background-color 0.3s;
+}
+
+header.scrolled {
+    background-color: rgba(0, 0, 0, 0.5); /* Fondo opaco */
     transition: 0.5s;
 }
 
-.container-header button:hover {
-    transform: scale(1.3);
-    transition: 0.5s;
-}
-
-.container-titulo {
+.container-header {
     display: flex;
     flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    margin-top: 20px;
-    width: 100%;
 }
 
-.effect-letter {
-    font-size: 1.5em;
+.container-header h1 {
+    margin-top: 0.3em;
+    margin-right: auto;
+    margin-left: 10em;
+    font-size: 48px;
+}
+
+.container-header ul {
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    gap: 2em;
+    margin-left: auto;
+    margin-right: 22em;
+    padding: 2em;
+}
+
+.container-header a {
+    text-decoration: none;
+    color: white;
+    font-size: 20px;
+    transition: 0.3s;
+}
+
+.container-header a:hover {
     color: yellow;
-    text-shadow: 0 0 5px rgba(255, 255, 0, 0.8), 0 0 10px rgba(255, 255, 0, 0.6);
+    transition: 0.3s;
 }
 
-.container-titulo img {
-    width: 100px;
-    transform: rotate(25deg);
-    margin-left: 30px;
+main {
+    margin-top: 92px;
 }
 
-.container-creadores {
+.container-main {
+    margin-top: 20px;
     display: flex;
     flex-direction: column;
-    margin-top: 20px;
-}
-
-.creador {
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px;
     justify-content: center;
+    align-items: center;
+    height: calc(100vh - 180px); /* Ajusta la altura para ocupar toda la pantalla menos el header */
+    color: white;
 }
 
-.creador p {
+.container-main h1 {
     text-align: center;
-    margin-left: 10px;
+    font-size:64px;
 }
 
-.img-creador {
-    width: 100px;
-    margin-right: 15px;
-    margin-left: 20px;
+.container-main p {
+    font-size: 24px;
 }
 
-.titulo-proyectos {
+.container-main a {
+    background-color: rgb(221, 221, 6);
+    padding: 0.5em;
+    border-radius: 2em;
+    color: black;
+    text-decoration: none;
+    margin-top: 1em;
+    font-size: 18px;
+}
+
+.titulo-projects {
     text-align: center;
-    margin-top: 20px;
-    text-decoration: underline;
+    font-size: 64px;
+    color: white;
+    margin-top: 1em;
 }
 
 .container-projects {
@@ -87,20 +119,18 @@ header {
 }
 
 .card {
-    background-color: #ffffff;
+    background-color: aliceblue;
     border: none;
     border-radius: 15px;
     width: 250px;
+    min-height: 350px; /* Ajusta la altura mínima para mantener uniformidad */
     margin: 20px;
     padding: 20px;
     text-align: center;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s, box-shadow 0.3s;
-}
-
-.card:hover {
-    transform: translateY(-10px);
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
 }
 
 .project-image {
@@ -114,12 +144,13 @@ header {
     font-size: 1.2em;
     margin: 15px 0;
     color: #333;
+    flex-grow: 1; 
 }
 
 .buttons {
     display: flex;
     justify-content: space-around;
-    margin-top: 15px;
+    margin-top: 10px; 
 }
 
 button {
@@ -187,9 +218,9 @@ button:active {
 }
 
 .demo-button {
-    border: 2px solid #d69e2e;
-    color: #d69e2e;
-    background-color: transparent;
+    border: 2px solid rgb(221, 221, 6);
+    color: #000;
+    background-color: rgb(221, 221, 6);
     padding: 8px 16px;
     border-radius: 4px;
     font-weight: bold;
@@ -198,8 +229,9 @@ button:active {
 }
 
 .demo-button:hover {
-    background-color: #d69e2e;
-    color: white;
+    background-color: rgb(235, 235, 3);
+    border: 2px solid rgb(180, 180, 3);
+    color: black;
 }
 
 .project-image {
